<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/event_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/event_name_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_time"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"/>
    <TextView
        android:id="@+id/time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/location_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/location_hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="15sp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/information_editText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/information_hint"/>

</LinearLayout>